# CBCC

./: .gitignore  BALLISTICS_REFERENCE.md  CMakeLists.txt  README.md  README.ru.md
src/: calculator.cpp  calculator.h  cli.cpp  cli.h  data.cpp  data.h  gui.cpp  gui.h  gui_actions.cpp  gui_actions.h  gui_css.cpp  gui_css.h  gui_draw.cpp  gui_handlers.cpp  gui_layout.cpp  gui_layout.h  gui_output.cpp  gui_output.h  gui_state.h  main.cpp  physics.cpp  physics.h  physics_dual.cpp  types.h
